# Enterprise-Multi-Agent-Platform

./: AGENTS.md  FILE_MANIFEST.md  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260716_0001_foundational_entities.py  20260716_0002_auth_refresh_tokens.py  20260717_0003_business_requests.py  (+12 more)
backend/app/: main.py
backend/tests/: test_admin_api.py  test_assistant_api.py  test_assistant_service.py  test_auth_api.py  test_auth_authorization.py  test_auth_passwords.py  test_auth_service.py  test_auth_tokens.py  test_business_request_api.py  test_business_request_models.py  test_business_request_repository.py  test_business_request_schemas.py  test_business_request_service.py  test_capability_gap_repository.py  test_capability_gap_service.py  test_collaboration_idempotency.py  test_collaboration_registry.py  test_collaboration_schemas.py  test_collaboration_security.py  test_collaboration_service.py  test_collaboration_workflow.py  test_customer_support_agent.py  test_customer_support_assistant.py  test_customer_support_contracts.py  test_customer_support_migration.py  test_customer_support_model_policy.py  test_customer_support_service.py  test_customer_support_workflow.py  test_database.py  test_department_contracts.py  test_department_execution.py  test_department_placeholders.py  test_department_registry.py  test_failure_api.py  test_failure_models.py  test_failure_repository.py  test_failure_schemas.py  test_failure_service.py  test_finance_agent.py  test_finance_api.py  (+89 more)
frontend/: index.html  (+4 more)
(+290 files in other folders)
