[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-multi-agent-backend"
version = "0.1.0"
description = "Backend for the Enterprise Multi-Agent Platform"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "groq>=1.5,<2.0",
    "langgraph>=1.2,<2.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "PyJWT>=2.10,<3.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
